media and screen

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -68,7 +68,7 @@
 }
 
 
-@media (max-width: 720px) {
+@media  screen and  (max-width: 720px) {
     .phoneBlock {
        flex-direction: column;
         align-items: center;
