--- a/src/components/MainWindow/Users/UsersSearchForm/UsersSearchForm.module.css
+++ b/src/components/MainWindow/Users/UsersSearchForm/UsersSearchForm.module.css
@@ -67,7 +67,7 @@
     cursor: pointer;
 }
 
-@media (max-width: 800px) {
+@media  screen and   (max-width: 800px) {
     .searchForm__item__input {
         width: 100%;
     }
