--- a/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
@@ -39,19 +39,19 @@
     border: 4px outset #a8792f;
 }
 
-@media (max-width: 900px){
+@media screen and  (max-width: 900px) {
     .message__item {
         font-size: 16px;
     }
 }
 
-@media (max-width: 700px){
+@media screen and  (max-width: 700px) {
     .message__item {
         font-size: 14px;
     }
 }
 
-@media (max-width: 550px){
+@media screen and  (max-width: 550px) {
     .message__item {
         font-size: 10px;
         min-width: 150px;
