--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/Contact/Contact.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/Contact/Contact.module.css
@@ -17,7 +17,7 @@
     color: #333;
 }
 
-@media (max-width: 1100px) {
+@media screen and  (max-width: 1100px) {
 
     .formBlock {
         width: 50%;
@@ -25,7 +25,7 @@
 
 }
 
-@media (max-width: 600px) {
+@media screen and  (max-width: 600px) {
 
     .formBlock {
         min-width: 300px;
