--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
@@ -84,7 +84,7 @@
 }
 
 
-@media (max-width: 1130px) {
+@media  screen and  (max-width: 1130px) {
 
     .contact__item {
         width: 45%;
@@ -92,7 +92,7 @@
 
 }
 
-@media (max-width: 755px) {
+@media  screen and  (max-width: 755px) {
     .contactsBlock {
         justify-content: center;
     }
