--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
@@ -4,7 +4,7 @@ h3:hover {
 
 .statusText {
     display: flex;
-    flex-direction: column ;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     width: 300px;
@@ -49,7 +49,7 @@ h3:hover {
     height: 30px;
 }
 
-@media (max-width: 800px) {
+@media screen and  (max-width: 800px) {
 
     .activeInput input {
         width: 240px;
@@ -57,7 +57,7 @@ h3:hover {
 
 }
 
-@media (max-width: 550px) {
+@media screen and  (max-width: 550px) {
 
     .activeInput input {
         width: 240px;
