--- a/src/components/MainWindow/Users/Users.module.css
+++ b/src/components/MainWindow/Users/Users.module.css
@@ -18,7 +18,7 @@
     margin-top: 10px;
 }
 
-@media (max-width: 640px) {
+@media screen and   (max-width: 640px) {
     .searchResult {
         justify-content: center;
     }
