--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -44,7 +44,7 @@
     font-size: 20px;
 }
 
-@media (max-width: 500px) {
+@media screen and   (max-width: 500px) {
     .nav__text {
         font-size: 14px;
     }
