--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,6 +9,12 @@
     border-radius: 0 0 5px 5px;
 }
 
+.headerInformBlock {
+    display: flex;
+    align-items: center;
+}
+
+
 .header__logo {
     width: 50px;
     height: 50px;
@@ -17,6 +23,22 @@
 .header__logo:hover {
     opacity: .8;
     cursor: pointer;
+}
+
+.headerClock {
+    margin-left: 10px;
+    font-size: 26px;
+    color: #fff;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 30%;
+    background-color: #722121;
+    border: 2px solid #fff;
+}
+
+.headerClock:hover {
+    color: #d2b438;
+    border: 2px solid #d2b438;
 }
 
 .header__loginBlock {
