Footer and Other components

--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.scss
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.scss
@@ -1,85 +1,79 @@
-h3:hover {
-  color: #333;
-}
 
-.statusText {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  width: 300px;
-  font-size: 28px;
-  font-weight: 700;
-  font-family: 'Luckiest Guy', cursive;
-}
+.main {
 
-.activeInput {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 300px;
-  font-size: 28px;
-  font-weight: 700;
-  font-family: 'Luckiest Guy', cursive;
-}
-
-.activeInput input {
-  outline: none;
-  border: 2px solid #dcb87e;
-  border-radius: 5px;
-}
-
-.status__text {
-  cursor: pointer;
-  font-size: 18px;
-  font-family: 'Pangolin', cursive;
-  text-align: left;
-}
-
-.status__text:hover {
-  color: #333;
-}
-
-.status__pencil:hover {
-  color: #a8792f;
-}
-
-.activeInput input {
-  width: 300px;
-  height: 30px;
-}
-
-@media screen and  (max-width: 800px) {
-
-  .activeInput input {
-    width: 240px;
+  @media screen and (max-width: 550px) {
+    display: flex;
+    justify-content: flex-start;
   }
 
-}
-
-@media screen and  (max-width: 550px) {
-
-  .activeInput input {
-    width: 240px;
+  h3:hover {
+    color: #333;
   }
 
   .statusText {
-    width: 250px;
-    font-size: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 300px;
+    font-size: 28px;
+    font-weight: 700;
+    font-family: 'Luckiest Guy', cursive;
+
+    @media screen and (max-width: 550px) {
+      width: 250px;
+      font-size: 22px;
+    }
+
+    .status__text {
+      cursor: pointer;
+      font-size: 18px;
+      font-family: 'Pangolin', cursive;
+      text-align: left;
+
+      @media screen and (max-width: 550px) {
+        font-size: 16px;
+      }
+
+      &:hover {
+        color: #333;
+      }
+
+    }
+
+    .status__pencil:hover {
+      color: #a8792f;
+    }
+
   }
 
   .activeInput {
-    width: 250px;
-    font-size: 22px;
-  }
-
-  .status__text {
-    font-size: 16px;
-  }
-
-  .main {
     display: flex;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 300px;
+    font-size: 28px;
+    font-weight: 700;
+    font-family: 'Luckiest Guy', cursive;
+
+    @media screen and (max-width: 550px) {
+      width: 250px;
+      font-size: 22px;
+    }
+
+    input {
+      outline: none;
+      border: 2px solid #dcb87e;
+      border-radius: 5px;
+      width: 300px;
+      height: 30px;
+
+      @media screen and (max-width: 800px) {
+        width: 240px;
+      }
+
+    }
+
   }
 
 }
