--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,12 @@
+@import '../../assets/styles/SASS/variables';
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 60px;
-  background-color: #601313;
+  background-color: $backgroundAndTextFirstColor;
   padding: 10px 5px;
   border-radius: 0 0 5px 5px;
 
@@ -31,16 +33,16 @@
     .headerClock {
       margin-left: 10px;
       font-size: 26px;
-      color: #fff;
+      color: $backgroundAndTextHoverFirstColor;
       cursor: pointer;
       padding: 8px;
       border-radius: 30%;
-      background-color: #722121;
-      border: 2px solid #fff;
+      background-color: $backgroundAndTextFirstColor;
+      border: 2px solid $backgroundAndTextHoverFirstColor;
 
       &:hover {
-        color: #d2b438;
-        border: 2px solid #d2b438;
+        color: $backgroundAndTextSecondColor;
+        border: 2px solid $footerTextColor;
       }
 
       @media screen and (max-width: 650px) {
@@ -57,7 +59,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 0 0 5px;
-  color: #fff;
+  color: $backgroundAndTextHoverFirstColor;
 
   .login__item {
     display: flex;
@@ -68,14 +70,14 @@
       display: flex;
       align-items: center;
 
-      border-right: 3px solid #fff;
+      border-right: 3px solid $backgroundAndTextHoverFirstColor;
       padding-right: 15px;
       min-height: 60px;
       font-family: 'Permanent Marker', cursive;
       font-size: 24px;
 
       &:hover {
-        color: #d2b438;
+        color: $backgroundAndTextSecondColor;
         cursor: pointer;
       }
 
@@ -99,10 +101,10 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        border: 2px solid #fff;
+        border: 2px solid $backgroundAndTextHoverFirstColor;
 
         &:hover {
-          border: 3px solid #d2b438;
+          border: 3px solid $backgroundAndTextSecondColor;
         }
 
         @media screen and (max-width: 500px) {
@@ -118,7 +120,7 @@
         font-weight: 700;
 
         &:hover {
-          color: #d2b438;
+          color: $backgroundAndTextSecondColor;
           cursor: pointer;
         }
 
@@ -137,7 +139,7 @@
 
         &:hover {
           border-radius: 50%;
-          background-color: #a99340;
+          background-color: $backgroundAndTextSecondColor;
           opacity: .6;
         }
 
@@ -159,7 +161,7 @@
       display: flex;
       align-items: center;
 
-      color: #fff;
+      color: $backgroundAndTextHoverFirstColor;
       text-decoration: none;
       padding-right: 15px;
       width: 50px;
