--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/SASS/variables';
+
 .login__block {
   width: 100%;
 
@@ -9,7 +11,7 @@
     margin-bottom: 20px;
 
     &:hover {
-      color: #fff;
+      color: $backgroundAndTextHoverFirstColor;
       text-shadow: 3px 2px 0 #030303;
     }
 
@@ -51,17 +53,17 @@
   height: 30px;
   border-radius: 3px;
   cursor: pointer;
-  background-color: #601313;
+  background-color: $backgroundAndTextFirstColor;
 
   &:hover {
     opacity: .9;
-    color: #fff;
+    color: $backgroundAndTextHoverFirstColor;
   }
 
   button {
     border: none;
     background: none;
-    color: #fff;
+    color: $backgroundAndTextHoverFirstColor;
     cursor: pointer;
   }
 
