--- a/src/components/MainWindow/News/News.module.scss
+++ b/src/components/MainWindow/News/News.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/SASS/variables';
+
 .news {
   display: flex;
   width: 100%;
@@ -78,17 +80,17 @@
     height: 30px;
     border-radius: 3px;
     cursor: pointer;
-    background-color: #601313;
+    background-color: $backgroundAndTextFirstColor;
 
     &:hover {
       opacity: .9;
-      color: #fff;
+      color: $backgroundAndTextHoverFirstColor;
     }
 
     button {
       border: none;
       background: none;
-      color: #fff;
+      color: $backgroundAndTextHoverFirstColor;
       cursor: pointer;
     }
 
