--- a/src/components/MainWindow/News/NewsItem/NewsItem.module.scss
+++ b/src/components/MainWindow/News/NewsItem/NewsItem.module.scss
@@ -1,3 +1,6 @@
+@import '../../../../assets/styles/SASS/variables';
+
+
 .newsBlock__item {
   display: flex;
   flex-wrap: wrap;
@@ -80,17 +83,17 @@
         height: 30px;
         border-radius: 3px;
         cursor: pointer;
-        background-color: #601313;
+        background-color: $backgroundAndTextFirstColor;
 
         &:hover {
           opacity: .9;
-          color: #fff;
+          color: $backgroundAndTextHoverFirstColor;
         }
 
         button {
           border: none;
           background: none;
-          color: #fff;
+          color: $backgroundAndTextHoverFirstColor;
           cursor: pointer;
         }
 
