--- a/src/components/MainWindow/Users/UsersSearchForm/UsersSearchForm.module.scss
+++ b/src/components/MainWindow/Users/UsersSearchForm/UsersSearchForm.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/styles/SASS/variables';
+
 .search {
   width: 100%;
   display: flex;
@@ -21,7 +23,7 @@
         margin-left: 2px;
 
         &:hover {
-          background-color: #f5f5f5;
+          background-color: $backgroundAndTextHoverFirstColor;
         }
 
       }
@@ -36,7 +38,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #f5f5f5;
+          background-color: $backgroundAndTextHoverFirstColor;
         }
 
       }
@@ -63,17 +65,17 @@
       height: 30px;
       border-radius: 3px;
       cursor: pointer;
-      background-color: #601313;
+      background-color: $backgroundAndTextFirstColor;
 
       &:hover {
         opacity: .8;
-        color: #fff;
+        color: $backgroundAndTextHoverFirstColor;
       }
 
       button {
         border: none;
         background: none;
-        color: #fff;
+        color: $backgroundAndTextHoverFirstColor;
         cursor: pointer;
       }
 
