scss and another changes

--- a/src/components/MainWindow/Dialogs/Dialog/Dialog.module.scss
+++ b/src/components/MainWindow/Dialogs/Dialog/Dialog.module.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap');
 
 .message {
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-}
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
 
-.message__item {
+  .message__item {
     display: flex;
     align-items: center;
     width: 85%;
@@ -22,9 +21,22 @@
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-}
 
-.delete__btn {
+    @media screen and (max-width: 900px) {
+      font-size: 16px;
+    }
+
+    @media screen and (max-width: 700px) {
+      font-size: 14px;
+    }
+
+    @media screen and (max-width: 550px) {
+      font-size: 10px;
+      min-width: 150px;
+    }
+  }
+
+  .delete__btn {
     font-size: 30px;
     margin-left: 20px;
     background-color: #b2a583;
@@ -32,39 +44,23 @@
     border-radius: 50%;
     cursor: pointer;
     border: 4px outset #fff;
-}
 
-.delete__btn:hover {
-    background-color: #a69971;
-    border: 4px outset #a8792f;
-}
-
-@media screen and  (max-width: 900px) {
-    .message__item {
-        font-size: 16px;
-    }
-}
-
-@media screen and  (max-width: 700px) {
-    .message__item {
-        font-size: 14px;
-    }
-}
-
-@media screen and  (max-width: 550px) {
-    .message__item {
-        font-size: 10px;
-        min-width: 150px;
+    @media screen and (max-width: 550px) {
+      font-size: 17px;
+      margin-right: 10px;
+      border: 3px outset #ffffff;
+      margin-left: 6px;
     }
 
-    .delete__btn {
-        font-size: 17px;
-        margin-right: 10px;
-        border: 3px outset #ffffff;
-        margin-left: 6px;
-    }
 
-    .delete__btn:hover {
+    &:hover {
+      background-color: #a69971;
+      border: 4px outset #a8792f;
+
+      @media screen and (max-width: 550px) {
         border: 3px outset #a8792f;
+      }
     }
+  }
 }
+
