refactored folders, scss, components and other

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/SASS/variables';
+@import 'src/assets/styles/SASS/variables';
 
 .nav {
   background-color: #dcb87e;
@@ -46,6 +46,7 @@
             font-size: 14px;
         }
       }
+
     }
   }
 }
