--- a/src/components/MainWindow/ProfileContainer/ProfileAPIContainer/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.scss
+++ b/src/components/MainWindow/ProfileContainer/ProfileAPIContainer/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../../assets/styles/SASS/variables';
+@import 'src/assets/styles/SASS/variables';
 
 .saveEdit__btn {
   display: flex;
