--- a/src/components/MainWindow/UsersPage/Users/User/User.module.scss
+++ b/src/components/MainWindow/UsersPage/Users/User/User.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/SASS/variables';
+@import 'src/assets/styles/SASS/variables';
 
 .userBlock {
   margin: 0 auto 20px;
